src/objects/ProjectBurdenMultiplierRequest__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignedToProjectDate__c</fullName>
        <label>Assigned To Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BasisofRequest__c</fullName>
        <label>Basis of Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompleteSiteBased__c</fullName>
        <label>Complete Site Based</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscussedwithManager__c</fullName>
        <label>Discussed with Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EffectiveFrom__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveTo__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinanceLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_BurdenMultiplierRequestsFL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OracleBurdenScheduleName__c</fullName>
        <label>Oracle Burden Schedule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleBurdenSchedule__c</fullName>
        <label>Oracle Burden Schedule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectBurdenMultiplierRequestsApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectBurdenMultiplier_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Burden Multiplier Requests</relationshipLabel>
        <relationshipName>ProjectBurdenMultiplierRequestsProject</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestedRateDetails__c</fullName>
        <label>RequestedRateDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestedRateSet__c</fullName>
        <label>Requested Rate Set</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ - Major Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - Field Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecificPersonWork__c</fullName>
        <label>Specific Person Work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StaffList__c</fullName>
        <label>Staff List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaskNumber__c</fullName>
        <label>Task Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Project Burden Multiplier Request</label>
    <nameField>
        <displayFormat>PBMR-{0}</displayFormat>
        <label>Project Burden Multiplier Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Burden Multiplier Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>